@@ -1,6 +1,7 @@
 package info.kgeorgiy.java.advanced.arrayset;
 
 import net.java.quickcheck.collection.Pair;
+import org.junit.Assert;
 import org.junit.FixMethodOrder;
 import org.junit.Test;
 import org.junit.runners.MethodSorters;
@@ -22,7 +23,25 @@ import static org.junit.Assert.assertEquals;
 @FixMethodOrder(MethodSorters.NAME_ASCENDING)
 public class NavigableSetTest extends SortedSetTest {
     @Test
-    public void test19_ceiling() {
+    public void test31_lower() {
+        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
+            final List<Integer> elements = pair.getSecond();
+            final Comparator<Integer> comparator = pair.getFirst();
+            final NavigableSet<Integer> set = set(elements, comparator);
+            final NavigableSet<Integer> treeSet = treeSet(elements, comparator);
+
+            for (final Integer element : inAndOut(elements)) {
+                assertEquals(
+                        "in lower(" + element + ") (comparator = " + comparator + ", elements = " + elements + ")",
+                        treeSet.lower(element),
+                        set.lower(element)
+                );
+            }
+        }
+    }
+
+    @Test
+    public void test32_ceiling() {
         for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
             final List<Integer> elements = pair.getSecond();
             final Comparator<Integer> comparator = pair.getFirst();
@@ -40,7 +59,25 @@ public class NavigableSetTest extends SortedSetTest {
     }
 
     @Test
-    public void test21_floor() {
+    public void test33_higher() {
+        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
+            final List<Integer> elements = pair.getSecond();
+            final Comparator<Integer> comparator = pair.getFirst();
+            final NavigableSet<Integer> set = set(elements, comparator);
+            final NavigableSet<Integer> treeSet = treeSet(elements, comparator);
+
+            for (final Integer element : inAndOut(elements)) {
+                assertEquals(
+                        "in " + "higher(" + element + ") (comparator = " + comparator + ", elements = " + elements + ")",
+                        treeSet.higher(element),
+                        set.higher(element)
+                );
+            }
+        }
+    }
+
+    @Test
+    public void test34_floor() {
         for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
             final List<Integer> elements = pair.getSecond();
             final Comparator<Integer> comparator = pair.getFirst();
@@ -58,7 +95,7 @@ public class NavigableSetTest extends SortedSetTest {
     }
 
     @Test
-    public void test22_navigableTailSet() {
+    public void test35_navigableTailSet() {
         for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
             final List<Integer> elements = pair.getSecond();
             final Comparator<Integer> comparator = pair.getFirst();
@@ -81,7 +118,30 @@ public class NavigableSetTest extends SortedSetTest {
     }
 
     @Test
-    public void test24_navigableSubSet() {
+    public void test36_navigableHeadSet() {
+        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
+            final List<Integer> elements = pair.getSecond();
+            final Comparator<Integer> comparator = pair.getFirst();
+            final NavigableSet<Integer> set = set(elements, comparator);
+            final NavigableSet<Integer> treeSet = treeSet(elements, comparator);
+
+            for (final Integer element : inAndOut(elements)) {
+                assertEq(
+                        set.headSet(element, true),
+                        treeSet.headSet(element, true),
+                        "in headSet(" + element + ", true) (comparator = " + comparator + ", elements = " + elements + ")"
+                );
+                assertEq(
+                        set.headSet(element, false),
+                        treeSet.headSet(element, false),
+                        "in headSet(" + element + ", false) (comparator = " + comparator + ", elements = " + elements + ")"
+                );
+            }
+        }
+    }
+
+    @Test
+    public void test37_navigableSubSet() {
         for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
             final List<Integer> elements = pair.getSecond();
             final Comparator<Integer> comparator = pair.getFirst();
@@ -92,7 +152,7 @@ public class NavigableSetTest extends SortedSetTest {
             for (final Pair<Integer, Integer> p : somePairs(fixedValues(all), fixedValues(all))) {
                 final Integer from = p.getFirst();
                 final Integer to = p.getSecond();
-                if (comparator.compare(from, to) <= 0) {
+                if (comparator != null && comparator.compare(from, to) <= 0 || comparator == null && from <= to) {
                     for (int i = 0; i < 4; i++) {
                         assertEq(
                                 set.subSet(from, i % 2 == 1, to, i / 2 == 1),
@@ -110,9 +170,20 @@ public class NavigableSetTest extends SortedSetTest {
     }
 
     @Test
-    public void test26_descendingSet() {
-        final NavigableSet<Integer> set = set(Arrays.asList(10, 20, 30), Integer::compareTo).descendingSet();
-        assertEquals("toArray()", Arrays.asList(30, 20, 10), toArray(set));
+    public void test38_mutators() {
+        final NavigableSet<Integer> set = set(List.of(1, 2, 3), Integer::compareTo);
+        testMutator(set::pollFirst);
+        testMutator(set::pollLast);
+    }
+
+    @Test
+    public void test39_descendingSet() {
+        testDescendingSet(set(List.of(10, 20, 30), Integer::compareTo).descendingSet());
+        testDescendingSet(set(List.of(10, 20, 30), null).descendingSet());
+    }
+
+    private static void testDescendingSet(final NavigableSet<Integer> set) {
+        assertEquals("toArray()", List.of(30, 20, 10), toArray(set));
         assertEquals("size()", 3, set.size());
         assertEquals("first()", 30, set.first().intValue());
         assertEquals("last()", 10, set.last().intValue());
@@ -125,8 +196,7 @@ public class NavigableSetTest extends SortedSetTest {
 
         testGet("headSet(%s).size()", i -> set.headSet(i).size(), descendingPairs(3, 2, 2, 1, 1, 0, 0));
         testGet("tailSet(%s).size()", i -> set.tailSet(i).size(), descendingPairs(0, 1, 1, 2, 2, 3, 3));
-
-        assertEquals("descendingSet().toArray()", Arrays.asList(10, 20, 30), toArray(set.descendingSet()));
+        assertEquals("descendingSet().toArray()", List.of(10, 20, 30), toArray(set.descendingSet()));
     }
 
     @SuppressWarnings({"unchecked", "rawtypes"})
@@ -151,6 +221,15 @@ public class NavigableSetTest extends SortedSetTest {
 
     private static <T> Pair<T, T> pair(final T arg, final T result) {
         return new Pair<>(arg, result);
+    }
+
+    protected static void testMutator(final Runnable mutator) {
+        try {
+            mutator.run();
+            Assert.fail("Expected UnsupportedOperationException");
+        } catch (final UnsupportedOperationException ignore) {
+            // Passed
+        }
     }
 
     protected NavigableSet<Integer> set(final List<Integer> elements, final Comparator<Integer> comparator) {
